--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-maps": "^0.22.1",
-    "react-native-svg": "^8.0.10"
+    "react-native-svg": "^8.0.10",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
